Tidy up multi-line section titles

--- a/styles.css
+++ b/styles.css
@@ -9,3 +9,8 @@ background-color:#DCE7EB;
 #nav .showall {font-weight:bold; margin-bottom:4px;}
 
 #nav .list .column p {display:inline;}
+
+div.block_menu_site_and_course ul,
+div.block_menu_site_and_course li {clear:both;}
+div.block_menu_site_and_course li div.icon {float:left; clear:left;}
+div.block_menu_site_and_course li div.c1 {float:left; width:160px;}
