Add support for conditional access to sections
Sections which are not currently visible to the student were being shown in the block, but would give an unfriendly error message stating that they don't have permission to view hidden sections if clicked.  This change makes the block check for availability - and if unavailable, whether it should show greyed out or not at all.

--- a/styles.css
+++ b/styles.css
@@ -14,3 +14,5 @@ div.block_menu_site_and_course ul,
 div.block_menu_site_and_course li {clear:both;}
 div.block_menu_site_and_course li div.icon {float:left; clear:left;}
 div.block_menu_site_and_course li div.c1 {float:left; width:160px;}
+
+div.block_menu_site_and_course li span.unavailable {color:#999;}
