Fix display issue on forum search results page.
Leaky selector in BootstrapBase causes the section links to appear outside
the block, over the top of the page content.

--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,11 @@ background-color:#DCE7EB;
 
 div.block_menu_site_and_course ul,
 div.block_menu_site_and_course li {clear:both;}
-div.block_menu_site_and_course .content ul.list li div.c1 {display:inline-block; width:166px; margin-left:2px; vertical-align:top;}
+
+/* This needs an ID to make it more specific than a leaky selector from BootstrapBase,
+   but it's possible that it won't always be within a #page, so we'll have both options. */
+div.block_menu_site_and_course .content ul.list li div.c1,
+#page div.block_menu_site_and_course .content ul.list li div.c1 {display:inline-block; width:166px; margin-left:2px; vertical-align:top;}
 
 div.block_menu_site_and_course li .unavailable {color:#999;}
 
